--- a/public/dwarves.html
+++ b/public/dwarves.html
@@ -205,13 +205,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org5f8c82e">The Ultimate Charm</a></li>
+<li><a href="#orgbcb0410">The Ultimate Charm</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org5f8c82e" class="outline-2">
-<h2 id="org5f8c82e">The Ultimate Charm</h2>
-<div class="outline-text-2" id="text-org5f8c82e">
+<div id="outline-container-orgbcb0410" class="outline-2">
+<h2 id="orgbcb0410">The Ultimate Charm</h2>
+<div class="outline-text-2" id="text-orgbcb0410">
 <p>
 Once upon a time, in a fairytale kingdom far, far away, some dwarves learned to make magical charms. These charms were made from gems and machinery and a dwarvish sort of magic. These charms came in many forms: some useful, some entertaining, some simply interesting to look at and contemplate. The dwarves were rather pleased with these charms that they were making, and they showed their creations with each other and were quite happy building, showing and sharing.
 </p>
