--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,12 @@ hi im luke this is my blog and stuff i made
 </thead>
 <tbody>
 <tr>
+<td class="org-left"><a href="milkweed.html">milkweed and mimicry</a></td>
+<td class="org-left">biology</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2025-09-08 Mon]</span></span></td>
+</tr>
+
+<tr>
 <td class="org-left"><a href="https://www.lzeitlin.com/astrosystem/">astrosystem</a></td>
 <td class="org-left">music, tools</td>
 <td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2025-06-11 Wed]</span></span></td>
@@ -389,7 +395,7 @@ hi im luke this is my blog and stuff i made
 </table>
 
 
-<div id="orge531c43" class="figure">
+<div id="org0a8dcc0" class="figure">
 <p><img src="images/waveforms.png" alt="waveforms.png" width="150" />
 </p>
 </div>
