--- a/public/milkweed.html
+++ b/public/milkweed.html
@@ -206,22 +206,123 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgef22746">Chord</a></li>
+<li><a href="#orgeef1a21">Milkweed</a></li>
+<li><a href="#orgcec7b1f">Cardiac Glycosides</a></li>
+<li><a href="#orgf5f52f6">The Monarch Butterfly</a></li>
+<li><a href="#orga85f23f">The Viceroy Butterfly</a></li>
+<li><a href="#org51af468">Batesian Mimicry</a></li>
+<li><a href="#orgbcd9e64">Müllerian Mimicry</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgef22746" class="outline-2">
-<h2 id="orgef22746">Chord</h2>
-<div class="outline-text-2" id="text-orgef22746">
-<p>
-In 2016, when I was learning Python, I designed this UI for a MIDI generating tool using <a href="https://py.processing.org/">processing mode for python</a>. The code is rather hacky but the diagram is interesting so I share it here. It is based on the circle of 5ths but illustrates some other interesting symmetries and patterns.
-</p>
+<div id="outline-container-orgeef1a21" class="outline-2">
+<h2 id="orgeef1a21">Milkweed</h2>
+<div class="outline-text-2" id="text-orgeef1a21">
 
-
-<div id="org014edce" class="figure">
-<p><img src="images/chord.png" alt="chord.png" />
+<div id="org782b13e" class="figure">
+<p><img src="images/milkweed.jpg" alt="milkweed.jpg" />
 </p>
 </div>
+
+<p>
+Milkweed is a perennial plant abundant in Africa and the Americas. The genus is named <code>Asclepias</code> after the Greek god of healing <code>Asclepius</code> who is often depicted with a snake that, according to Greek mythology, slid up his staff and taught him secret knowledge. The symbol of a snake wound around a staff is to this day a familiar symbol associated with medicine.
+</p>
+
+
+<div id="org2331b13" class="figure">
+<p><img src="images/Star_of_life2.svg.png" alt="Star_of_life2.svg.png" />
+</p>
+</div>
+</div>
+</div>
+<div id="outline-container-orgcec7b1f" class="outline-2">
+<h2 id="orgcec7b1f">Cardiac Glycosides</h2>
+<div class="outline-text-2" id="text-orgcec7b1f">
+<p>
+Milkweeds produce a latex containing cardiac glycosides, a bitter-tasting toxin, as protection against herbivores. These compounds are more concentrated in the parts of the plants that animals would eat (leaves, stems, seeds).
+</p>
+
+
+<div id="orgd2c3d55" class="figure">
+<p><img src="images/Cardiac_glycoside.png" alt="Cardiac_glycoside.png" />
+</p>
+</div>
+
+<p>
+Cardiac glycosides cause a chain reaction that affects the heart: They inhibit sodium-potassium pumps in cells, disrupting the potassium ion gradient across cell membranes. This in turn causes a higher concentration of intracellular calcium due to less efficient sodium-calcium exchangers. The higher calcium levels cause the heart to pump more forcefully due to increased interaction between actin and the myosin filaments that generate contractile force (positive inotropic effect). It also causes a slower heart rate due to its effect on the electrical conduction system (negative chronotropic effect).
+</p>
+
+<p>
+Preexisting steroid synthesis pathways that serve other functions like hormone production may have provided a starting point for it to emerge from gradual mutation. Any genetic mutations that reduce the plant's palatability to herbivores would be advantageous. The production of cardiac glycosides developed independently in other plants such as foxgloves; an example of <code>convergent evolution</code>.
+</p>
+</div>
+</div>
+<div id="outline-container-orgf5f52f6" class="outline-2">
+<h2 id="orgf5f52f6">The Monarch Butterfly</h2>
+<div class="outline-text-2" id="text-orgf5f52f6">
+
+<div id="orgc5e5b8d" class="figure">
+<p><img src="images/Monarch.jpg" alt="Monarch.jpg" />
+</p>
+</div>
+
+<p>
+Not all animals are deterred from eating milkweed. The caterpillar of the milkweed butterfly, more commonly known as the monarch butterfly, has evolved specific amino acid substitutions on their cells' sodium-potassium pumps, reducing the effectiveness of inhibition by cardiac glycosides. They are not just able to ingest it, they selectively absorb the poison into their hemolymph (insect blood) and concentrate it in various tissues. This persists through metamorphosis into the adult stage, making the butterfly unappetising to its would-be predators.
+</p>
+
+<p>
+The distinctively coloured monarch butterfly, named after King William III aka William of Orange, migrates great distances across North and Central America for good food and weather conditions. As a result, it is exposed to many ecosystems with distinctive predators. This exposure to diverse environments and predators may explain why monarch butterflies were particularly well-suited to develop distinctive colouration and a poisonous, bad tasting poison. The identifiable colours are a form of <code>aposematism</code> - signalling of danger to predators.
+</p>
+</div>
+</div>
+<div id="outline-container-orga85f23f" class="outline-2">
+<h2 id="orga85f23f">The Viceroy Butterfly</h2>
+<div class="outline-text-2" id="text-orga85f23f">
+
+<div id="org6014bb8" class="figure">
+<p><img src="images/viceroy.jpg" alt="viceroy.jpg" />
+</p>
+</div>
+
+<p>
+The viceroy looks somewhat similar to the monarch but it does not have the adaptation to eat milkweed. However, since as far as predators are concerned it is performing aposematism, it appears to get the same benefit as the monarch without the additional expenditure of energy. In the past this was thought to be an example of <code>Batesian mimicry</code>.
+</p>
+</div>
+</div>
+<div id="outline-container-org51af468" class="outline-2">
+<h2 id="org51af468">Batesian Mimicry</h2>
+<div class="outline-text-2" id="text-org51af468">
+
+<div id="org3696521" class="figure">
+<p><img src="images/bates.jpg" alt="bates.jpg" />
+</p>
+</div>
+
+<p>
+In 1848 two English amateur entomologists, Henry Walter Bates and Alfred Russel Wallace, inspired by books including Darwin's The Voyage of the Beagle (1839), set off to Brazil to explore the Amazon rainforest. Bates remained for over a decade and made a detailed study of butterfly species in the region. He noticed that some butterflies had superficial similarities in appearance but, upon closer inspection, were clearly not closely related. He observed that some distinctively colored butterflies seemed unafraid of predators. He reasoned that these species were either unpalatable themselves, or had evolved to resemble toxic species and thus gained protection without producing their own toxins.
+</p>
+</div>
+</div>
+<div id="outline-container-orgbcd9e64" class="outline-2">
+<h2 id="orgbcd9e64">Müllerian Mimicry</h2>
+<div class="outline-text-2" id="text-orgbcd9e64">
+
+<div id="org0c4be16" class="figure">
+<p><img src="images/Franzmuller.jpg" alt="Franzmuller.jpg" />
+</p>
+</div>
+
+<p>
+As mentioned above, the viceroy butterfly cannot eat milkweed. However it does eat willow and other plants that contain salicylic acid and other bitter compoounds. This causes it to also taste unpalatable. While not as toxic, this is also a deterrent to herbivores. Since it has its own deterrent it is not a strict example of Batesian mimicry.
+</p>
+
+<p>
+Fritz Müller, a German biologist, studied butterflies in South America in the 1850s and also noticed the superficial similarity of not-so-closely related butterflies. As an early proponent of Darwin's theory, Müller suggested an evolutionary reason for this whereby different species that were somehow protected against predators might evolve a similar appearance so as to share the costs of predator education.
+</p>
+
+<p>
+Since the viceroy possesses its own chemical deterrent, its resemblance to the monarch represents Müllerian rather than Batesian mimicry.
+</p>
 </div>
 </div>
 </div>
