--- a/public/404.html
+++ b/public/404.html
@@ -202,9 +202,9 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
-<div id="outline-container-orgbef29e4" class="outline-2">
-<h2 id="orgbef29e4">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgbef29e4">
+<div id="outline-container-org34e7828" class="outline-2">
+<h2 id="org34e7828">404 - page not found</h2>
+<div class="outline-text-2" id="text-org34e7828">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
