--- a/public/cljs-openlayers.html
+++ b/public/cljs-openlayers.html
@@ -206,15 +206,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3c7715a">Making a geo PWA with CLJS and Openlayers</a>
+<li><a href="#org0247fe8">Making a geo PWA with CLJS and Openlayers</a>
 <ul>
-<li><a href="#org3aca95a">Motivation</a></li>
-<li><a href="#orgebec1ff">Shadow-cljs setup</a></li>
-<li><a href="#org686ad80">Adding Openlayers</a></li>
-<li><a href="#org6658b46">Turning it into a PWA</a>
+<li><a href="#org6d60db3">Motivation</a></li>
+<li><a href="#org8c70d6f">Shadow-cljs setup</a></li>
+<li><a href="#org9d7ddc6">Adding Openlayers</a></li>
+<li><a href="#org8e737bc">Turning it into a PWA</a>
 <ul>
-<li><a href="#org47053ae">Icons</a></li>
-<li><a href="#orga7a24f8">Manifest</a></li>
+<li><a href="#orgc84024a">Icons</a></li>
+<li><a href="#orge42108c">Manifest</a></li>
 </ul>
 </li>
 </ul>
@@ -222,13 +222,13 @@
 </ul>
 </div>
 </div>
-<div id="outline-container-org3c7715a" class="outline-2">
-<h2 id="org3c7715a">Making a geo PWA with CLJS and Openlayers</h2>
-<div class="outline-text-2" id="text-org3c7715a">
+<div id="outline-container-org0247fe8" class="outline-2">
+<h2 id="org0247fe8">Making a geo PWA with CLJS and Openlayers</h2>
+<div class="outline-text-2" id="text-org0247fe8">
 </div>
-<div id="outline-container-org3aca95a" class="outline-3">
-<h3 id="org3aca95a">Motivation</h3>
-<div class="outline-text-3" id="text-org3aca95a">
+<div id="outline-container-org6d60db3" class="outline-3">
+<h3 id="org6d60db3">Motivation</h3>
+<div class="outline-text-3" id="text-org6d60db3">
 <p>
 We want to make a quick and easy map based app. ClojureScript is the natural choice for me. Maybe this would be a good application for <a href="https://github.com/squint-cljs/squint">Squint</a> though, I haven't tried that yet. Another article perhaps.
 </p>
@@ -242,9 +242,9 @@ The choice of Progressive Web App is motivated by not wanting to have to write p
 </p>
 </div>
 </div>
-<div id="outline-container-orgebec1ff" class="outline-3">
-<h3 id="orgebec1ff">Shadow-cljs setup</h3>
-<div class="outline-text-3" id="text-orgebec1ff">
+<div id="outline-container-org8c70d6f" class="outline-3">
+<h3 id="org8c70d6f">Shadow-cljs setup</h3>
+<div class="outline-text-3" id="text-org8c70d6f">
 <p>
 The first part of this setup is based on the shadow-cljs docs. If you encounter problems along the way then refer back to the <a href="https://github.com/thheller/shadow-cljs?tab=readme-ov-file#quick-start">shadow-cljs quickstart guide</a>. 
 </p>
@@ -337,9 +337,9 @@ This should trigger a build. We should have a connected app at <a href="http://l
 </p>
 </div>
 </div>
-<div id="outline-container-org686ad80" class="outline-3">
-<h3 id="org686ad80">Adding Openlayers</h3>
-<div class="outline-text-3" id="text-org686ad80">
+<div id="outline-container-org9d7ddc6" class="outline-3">
+<h3 id="org9d7ddc6">Adding Openlayers</h3>
+<div class="outline-text-3" id="text-org9d7ddc6">
 <p>
 Interrupt the <code>shadow-cljs watch</code> process in the terminal with Ctrl-C, and then install Openlayers with <code>npm</code>:
 </p>
@@ -436,9 +436,9 @@ Now you should have an app with an interactive map. Clearly the buttons and attr
 </p>
 </div>
 </div>
-<div id="outline-container-org6658b46" class="outline-3">
-<h3 id="org6658b46">Turning it into a PWA</h3>
-<div class="outline-text-3" id="text-org6658b46">
+<div id="outline-container-org8e737bc" class="outline-3">
+<h3 id="org8e737bc">Turning it into a PWA</h3>
+<div class="outline-text-3" id="text-org8e737bc">
 <p>
 We want to allow the user to install this in their device such that it seems like any other app. To get this capability we need to turn it into a progressive web app. While essentially just a web app, a PWA typically has a few extra ingredients:
 </p>
@@ -448,15 +448,15 @@ We want to allow the user to install this in their device such that it seems lik
 <li>a service worker - This does the work of caching certain resources, allowing for offline usage. A service worker is actually optional so we'll skip it in this guide, but look into it.</li>
 </ul>
 </div>
-<div id="outline-container-org47053ae" class="outline-4">
-<h4 id="org47053ae">Icons</h4>
-<div class="outline-text-4" id="text-org47053ae">
+<div id="outline-container-orgc84024a" class="outline-4">
+<h4 id="orgc84024a">Icons</h4>
+<div class="outline-text-4" id="text-orgc84024a">
 <p>
 Let's start with the icons. Here's a lazy method: get an LLM to generate a vector image so it's nice and clean (at time of writing Claude is nice for this because it will write the SVG in code and then render a preview). Screenshot that at a reasonable resolution (tip: tell Claude to draw the logo such that it is inside a square with a black outline. That way you can select an almost exact square easily)
 </p>
 
 
-<div id="org9e78b37" class="figure">
+<div id="org6a853e1" class="figure">
 <p><img src="images/claude-compass.png" alt="claude-compass.png" />
 </p>
 </div>
@@ -474,9 +474,9 @@ There should be three directories of icons for different platforms and an <code>
 </p>
 </div>
 </div>
-<div id="outline-container-orga7a24f8" class="outline-4">
-<h4 id="orga7a24f8">Manifest</h4>
-<div class="outline-text-4" id="text-orga7a24f8">
+<div id="outline-container-orge42108c" class="outline-4">
+<h4 id="orge42108c">Manifest</h4>
+<div class="outline-text-4" id="text-orge42108c">
 <p>
 We already have the icons in our manifest. We need to add a few other things.
 </p>
@@ -521,7 +521,7 @@ Now we should have a functioning PWA. If you are using Chrome for example you sh
 </p>
 
 
-<div id="orgf71f6da" class="figure">
+<div id="orgedae10c" class="figure">
 <p><img src="images/download-pwa.png" alt="download-pwa.png" />
 </p>
 </div>
